# squat-wars

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: style-checks.yaml
squat_wars/: classifier.py  data.py  draw_engine.py  game_state.py  main.py  metrics.py  movenet.py  player.py  ranking.py  utils.py  video_writer.py
