[tool.black]
line-length = 100
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]

[tool.poetry]
name = "squat-wars"
version = "0.1.0"
description = ""
authors = [
    "Diego Marvid <dmarvid@tryolabs.com>",
    "Santiago Suárez <santiago@tryolabs.com>",
    "Julio Morero <julio@tryolabs.com>"
]
readme = "README.md"
packages = [{include = "squat_wars"}]


[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
numpy = ">=1.20.0"
opencv-python = "^4.7.0.72"
pandas = ">=1.3.1"
pynput = "^1.7.6"
boto3 = "^1.26.80"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pycoral = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
viztracer = "^0.15.6"
ipython = "^8.10.0"


[[tool.poetry.source]]
name = "coral"
url = "https://google-coral.github.io/py-repo/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
